--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,7 +26,8 @@ body {
     font-size: 16px;
     line-height: 1.6;
     color: $color-text;
-    background: $color-bg;
+    /*background: $color-bg;*/
+    background: orange;
 }
 
 // Network Bar
