--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -41,6 +41,11 @@ $space-3xl: 64px;
 // Sidebar
 $sidebar-width: 200px;
 
+// Sidebar-specific font sizes
+$font-size-sidebar-base: 12px;
+$font-size-sidebar-title: 14px;
+$font-size-sidebar-link: 11px;
+
 // Breakpoints
 $bp-mobile: 480px;
 $bp-tablet: 768px;
