--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,10 @@
     <title>{% if page.title %}{{ page.title }} | {% endif %}Peter Salvato</title>
     <meta name="description" content="{{ page.description | default: site.description }}">
 
-    <!-- Google Fonts -->
+    <!-- Google Fonts: Helvetica Now, Space Mono -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&family=Courier+Prime:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Helvetica+Now+Display:wght@400;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
