calc variable syntax fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -207,7 +207,7 @@ a {
 
 #main-content {
   padding: $padding-large $padding-large;
-  padding-left: calc($sidebar-width + 2rem);
+  padding-left: calc(#{$sidebar-width} + 2rem);
 
   #container {
     max-width: $container-max-width;
