--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -127,7 +127,7 @@ a {
   z-index: 100;
 
   #sidebar-header {
-    margin-bottom: $gap-xlarge;
+    //margin-bottom: $gap-xlarge;
     border-bottom: 1px solid $color-border;
     padding-bottom: $padding-medium;
 
