--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -128,11 +128,11 @@ a {
 
   #sidebar-header {
     //margin-bottom: $gap-xlarge;
-    border-bottom: 1px solid $color-border;
-    padding-bottom: $padding-medium;
+    //border-bottom: 1px solid $color-border;
+    //padding-bottom: $padding-medium;
 
     #sidebar-title {
-      font-size: 16px;
+      font-size: 1.5rem;
       font-weight: 700;
       letter-spacing: 0.05em;
       line-height: 1.3;
