--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -175,9 +175,9 @@ a {
         list-style: none;
         margin: 0;
         padding: 0;
-        display: flex;
-        flex-direction: column;
-        gap: $gap-small;
+        //display: flex;
+        //flex-direction: column;
+        //gap: $gap-small;
 
         a {
           font-size: 11px;
