--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -335,8 +335,6 @@ footer {
   }
 
   .footer-column {
-    text-align: center;
-
     h4 {
       font-family: $font-sans;
       font-size: 11px;
@@ -345,12 +343,14 @@ footer {
       text-transform: uppercase;
       color: #c0c0c0;
       margin-bottom: $gap-large;
+      text-align: center;
     }
 
     ul {
       list-style: none;
       padding: 0;
       margin: 0;
+      text-align: left;
     }
 
     li {
