Align footer column headers to the left

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -343,7 +343,7 @@ footer {
       text-transform: uppercase;
       color: #c0c0c0;
       margin-bottom: $gap-large;
-      text-align: center;
+      text-align: left;
     }
 
     ul {
