--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,15 @@
 <footer class="system-footer">
     <div class="footer-columns">
-        <!-- Column 1: Contact & Socials -->
+        <!-- Column 1: Pages (aligns with sidebar nav) -->
+        <div class="footer-column footer-pages">
+            <h4>Pages</h4>
+            <ul>
+                <li><a href="{{ '/provenance' | relative_url }}">Provenance</a></li>
+                <li><a href="{{ '/practice/colophon' | relative_url }}">Colophon</a></li>
+            </ul>
+        </div>
+
+        <!-- Column 2: Contact & Socials -->
         <div class="footer-column">
             <h4>Contact</h4>
             <ul>
@@ -8,15 +17,6 @@
                 {% for link in site.data.index.contact.links %}
                 <li><a href="{{ link.url }}" target="_blank" rel="noopener">{{ link.title }}</a></li>
                 {% endfor %}
-            </ul>
-        </div>
-
-        <!-- Column 2: Meta Pages -->
-        <div class="footer-column">
-            <h4>Pages</h4>
-            <ul>
-                <li><a href="{{ '/provenance' | relative_url }}">Provenance</a></li>
-                <li><a href="{{ '/practice/colophon' | relative_url }}">Colophon</a></li>
             </ul>
         </div>
 
